--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav >
+<nav>
   <a routerLink="/">Home</a>
   <br>
-  <a routerLink="/lazy-feature">Lazy loaded feature module</a>
+  <a routerLink="/lazy-feature" data-test="lazy-route-link">Lazy loaded feature module</a>
 </nav>
 <router-outlet></router-outlet>
